--- a/admin-dashboard/css/users.css
+++ b/admin-dashboard/css/users.css
@@ -348,25 +348,25 @@ th {
 /* Column widths */
 .table th:nth-child(1),
 .table td:nth-child(1) {
-    width: 15%;
+    width: 25%;
     padding-left: 16px;
 }
 
 .table th:nth-child(2),
 .table td:nth-child(2) {
-    width: 15%;
+    width: 25% !important;
     padding-left: 24px;
 }
 
 .table th:nth-child(3),
 .table td:nth-child(3) {
-    width: 20%;
+    width: 25% !important;
     text-align: center;
 }
 
 .table th:nth-child(4),
 .table td:nth-child(4) {
-    width: 35%;
+    width: 25%;
     padding-left: 24px;
 }
 
@@ -958,4 +958,8 @@ line-height: normal;
 
 .social-button button img{
     width: 30px;
+}
+
+.table-text {
+    text-align: left !important;
 }
