--- a/css/responsive-1.css
+++ b/css/responsive-1.css
@@ -57,6 +57,7 @@
     background-color: #f6f6f6;
     top: 100px;
     left: 0;
+    z-index: 1000 !important;
   }
   .forum-heading h1 {
     font-size: 30px;
