--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,11 @@ body {
   height: 120px;
 }
 
+.logo{
+  width: 130px !important;
+  height: 95px !important;
+}
+
 .dropdown-menu {
   border: none !important;
 }
@@ -456,9 +461,7 @@ footer a{
   margin-top: 10px;
   padding: 0 !important;
 }
-.footer-content {
-  margin-top: -30px !important;
-}
+
 
 .footer-content p {
   color: #2e2e2e !important;
